--- a/index.html
+++ b/index.html
@@ -29,12 +29,20 @@
             color: blue;
             font-size: 18px;
         }
+        img {
+            width: 80%;
+            max-width: 800px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>경험을 미래로 잇다</h1>
-        <h2>Experience Bridge</h2>
+        <h2>Connecting Experience to the Future</h2>
+        <h3>ExperienceBridge</h3>
+        <img src="https://bluestarwoo07.github.io/images/main_image.png" alt="Experience Bridge Main">
         <p>시니어 시대 45% 860만 영시니어가 온다</p>
         
         <div class="nav">
