--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             padding: 20px;
             border-bottom: 2px solid #ddd;
         }
+        .footer {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            margin-top: 50px;
+        }
+        .footer a {
+            color: #f4f4f4;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -78,6 +88,15 @@
             <img src="https://bluestarwoo07.github.io/images/marketing_strategy.png" alt="마케팅 전략">
             <p>우리의 마케팅 전략은?</p>
         </div>
+    </div>
+    
+    <div class="footer">
+        <h3>회사 소개</h3>
+        <p>Experience Bridge는 시니어와 청년을 연결하는 혁신적인 플랫폼입니다.</p>
+        <p><strong>연락처:</strong> contact@experiencebridge.com</p>
+        <p><strong>전화번호:</strong> +82 10-1234-5678</p>
+        <p><strong>주소:</strong> 서울특별시 강남구 테헤란로 123</p>
+        <p><a href="mailto:contact@experiencebridge.com">이메일 보내기</a></p>
     </div>
 </body>
 </html>
