--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="section">
             <h1>문제인식과 창업배경</h1>
             <img src="https://bluestarwoo07.github.io/images/problem_background.png" alt="창업배경 이미지">
+            <img src="https://bluestarwoo07.github.io/images/problem_background2.png" alt="창업배경 이미지">
             <p>세대 브릿지장 마련 - ExperienceBridge</p>
         </div>
         
@@ -94,8 +95,8 @@
         <h3>회사 소개</h3>
         <p>Experience Bridge는 시니어와 청년을 연결하는 혁신적인 플랫폼입니다.</p>
         <p><strong>연락처:</strong> contact@experiencebridge.com</p>
-        <p><strong>전화번호:</strong> +82 10-1234-5678</p>
-        <p><strong>주소:</strong> 서울특별시 강남구 테헤란로 123</p>
+        <p><strong>전화번호:</strong> +82 10-9041-7866</p>
+        <p><strong>주소:</strong> 서울특별시 강동구 상암로 79길 88 </p>
         <p><a href="mailto:contact@experiencebridge.com">이메일 보내기</a></p>
     </div>
 </body>
