--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <h3>회사 소개</h3>
         <p>Experience Bridge는 시니어와 청년을 연결하는 혁신적인 플랫폼입니다.</p>
         <p><strong>연락처:</strong> contact@experiencebridge.com</p>
-        <p><strong>전화번호:</strong> +82 10-9041-5678</p>
-        <p><strong>주소:</strong> 서울특별시 강남구 테헤란로 123</p>
+        <p><strong>전화번호:</strong> +82 10-9041-7866</p>
+        <p><strong>주소:</strong> 서울특별시 강동구 상암로 79길 88 </p>
         <p><a href="mailto:contact@experiencebridge.com">이메일 보내기</a></p>
     </div>
 </body>
