--- a/index.html
+++ b/index.html
@@ -36,20 +36,10 @@
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: bold;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            background: linear-gradient(to right, #0073e6, #00b3ff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             margin-bottom: 10px;
-        }
-        .footer {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            margin-top: 50px;
-        }
-        .footer a {
-            color: #f4f4f4;
-            text-decoration: none;
         }
     </style>
 </head>
@@ -83,15 +73,6 @@
             <h1>마케팅 전략</h1>
             <img src="https://bluestarwoo07.github.io/images/marketing_strategy.png" alt="마케팅 전략">
         </div>
-    </div>
-    
-    <div class="footer">
-        <h3>회사 소개</h3>
-        <p>Experience Bridge는 시니어와 청년을 연결하는 혁신적인 플랫폼입니다.</p>
-        <p><strong>연락처:</strong> contact@experiencebridge.com</p>
-        <p><strong>전화번호:</strong> +82 10-9041-7866</p>
-        <p><strong>주소:</strong> 서울특별시 강동구 상암로 79길 88 </p>
-        <p><a href="mailto:contact@experiencebridge.com">이메일 보내기</a></p>
     </div>
 </body>
 </html>
